# RoadBench

./: README.md  bev_lane_counting.py  bev_lane_counting.sh  bev_lane_counting_metrics.py  bev_lane_counting_more.sh  bev_lane_designations.py  bev_lane_designations.sh  bev_lane_designations_metrics.py  bev_lane_designations_more.sh  bev_roadnet_correction.py  bev_roadnet_correction.sh  bev_roadnet_correction_metrics.py  fpv_lane_counting.py  fpv_lane_counting.sh  fpv_lane_counting_metrics.py  fpv_lane_designations.py  fpv_lane_designations.sh  fpv_lane_designations_metrics.py  fpv_road_type.py  fpv_road_type.sh  fpv_road_type_metrics.py  pyproject.toml
data/task_1_2/: task1_both_colors_glm-4.5v.jsonl  task1_both_colors_gpt-5-mini.jsonl  task1_glm-4.5v.jsonl  task1_google_gemini-2.5-flash-image-preview.jsonl  task1_google_gemini-2.5-flash.jsonl  task1_google_gemini-2.5-pro.jsonl  task1_google_gemma-3-12b-it.jsonl  task1_google_gemma-3-27b-it.jsonl  task1_gpt-5-mini.jsonl  task1_gpt-5-nano.jsonl  task1_image_only_arrows_glm-4.5v.jsonl  task1_image_only_arrows_gpt-5-mini.jsonl  task1_image_only_colors_glm-4.5v.jsonl  task1_image_only_colors_gpt-5-mini.jsonl  task1_meta-llama_llama-3.2-11b-vision-instruct.jsonl  task1_meta-llama_llama-3.2-90b-vision-instruct.jsonl  task1_openai_gpt-5.jsonl  task1_prompt_only_colors_glm-4.5v.jsonl  task1_prompt_only_colors_gpt-5-mini.jsonl  task1_qwen2.5-vl-32b-instruct.jsonl  task1_qwen2.5-vl-72b-instruct.jsonl  (+22 more)
roadnetbenchmark/: __init__.py  concurrent_jsonl_writer.py  coord.py  image.py  metric.py  satellite.py  vlm_client.py
(+62 files in other folders)
